src/objects/System_Logger_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Create_Case_On__c</fullName>
        <label>Create Case On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>On_Debug__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>On Debug</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Debug Log</fullName>
                    <default>true</default>
                    <label>Debug Log</label>
                </value>
                <value>
                    <fullName>System Log</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Error__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>On Error</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Debug Log</fullName>
                </value>
                <value>
                    <fullName>System Log</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Info__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>On Info</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Debug Log</fullName>
                </value>
                <value>
                    <fullName>System Log</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Warn__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>On Warn</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Debug Log</fullName>
                </value>
                <value>
                    <fullName>System Log</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Email_On__c</fullName>
        <label>Send Email On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <defaultValue>&quot;DEFAULT&quot;</defaultValue>
        <label>User Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>System Logger Setting</label>
    <pluralLabel>System Logger Settings</pluralLabel>
</CustomObject>